# converto

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  types.rs
src-tauri/src/commands/: convert.rs  inspect.rs  mod.rs  thumbnail.rs
src-tauri/src/formats/: mod.rs
src-tauri/src/processing/: decoder.rs  encoder.rs  metadata.rs  mod.rs  pipeline.rs  thumbnail.rs
src/components/dropzone/: DropZone.tsx  FileList.tsx
src/components/layout/: AppShell.tsx  StatusBar.tsx
src/components/progress/: ProgressPanel.tsx
src/components/settings/: AspectRatioSelector.tsx  ConversionSettings.tsx  FormatSelector.tsx  MetadataToggle.tsx  OutputDirectory.tsx  QualitySlider.tsx  ResizeSetting.tsx  ThemeSelector.tsx
src/constants/: formats.ts
src/hooks/: useConversion.ts  useDropHandler.ts  useOutputDirectory.ts  useThumbnails.ts
src/services/: tauriCommands.ts
src/stores/: conversionStore.ts  themeStore.ts
src/types/: conversion.ts  formats.ts  image.ts
src/utils/: formatHelpers.ts
